syntax = "proto3";

package common;

import "google/protobuf/struct.proto";

option go_package = "./messages";

message Destination {
  string to = 1;
  repeated string endpoints = 2;
}

message EventRequest {
  string request_id = 1;
  string event = 2;
  string route = 3;
  string from = 4;
  repeated Destination to = 5;
  string reference = 6;
  string created_at = 7;
  google.protobuf.Struct payload = 8;
}

message EventResponse {
  bool success = 1;
  string request_id = 2;
  repeated string errors = 3;
}